# TravelMate

./: .gitignore  README.md  TestTripExample.txt  pyproject.toml  requirements.txt  run_gui.bat
ai-cost-cache-dashboard/: README.md  start.bat  start.sh
ai-cost-cache-dashboard/backend/: .env.example  main.py  requirements.txt
ai-cost-cache-dashboard/frontend/: package-lock.json  package.json  vite.config.ts
docs/: ARCHITEKTURA.md  ARCHITEKTURA_PRODUKCYJNA.md  DBCACHEINFO.md  DOKUMENTACJA_BIZNESOWA.md  DOKUMENTACJA_TECHNICZNA.md  EMBEDDING_AIACT_BUILDVSBUY.md  IMPLEMENTACJA_TECHNICZNA.md  PWA_SETUP.md  ROZWOJ.md  SECURITY.md  TOKEN_COUNTING.md  TravelMate_AI_kompletna_dokumentacja_techniczna.md  UZYCIE.md
tests/: test_formatter_agent.py  test_input_parser_transport.py  test_itinerary_agent.py  test_llm_content.py  test_markdown_contract.py  test_markdown_formatter.py  test_output_writer.py  test_transport_agent.py
travelmate/: __init__.py  cli.py  graph.py  models.py
travelmate/agents/: __init__.py  formatter_agent.py  geo_agent.py  itinerary_agent.py  profile_agent.py  transport_agent.py  verification_agent.py
travelmate/api/: __init__.py  main.py
travelmate/prompts/: __init__.py  formatter_prompt.py  geo_prompt.py  itinerary_prompt.py  profile_prompt.py  transport_prompt.py  verification_prompt.py
travelmate/services/: __init__.py  planner_service.py
travelmate/tools/: __init__.py  config.py  dashboard_push.py  here_maps.py  input_parser.py  llm_content.py  logging_utils.py  markdown_contract.py  markdown_formatter.py  model_factory.py  payload.py  (+3 more)
(+38 files in other folders)
