[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travelmate"
version = "0.1.0"
description = "TravelMate AI planner"
requires-python = ">=3.11"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["travelmate*"]
